--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   path_provider: ^2.0.2
   flutter_bloc: ^8.0.1
   rxdart: ^0.27.3
+  firebase_core: ^1.17.1
+  firebase_crashlytics: ^2.8.1
 
 dev_dependencies:
   mockito: ^5.0.8
@@ -60,6 +62,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - certificates/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
